# gantry

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  buf.gen.yaml  go.mod  go.sum  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/git/: SKILL.md
.claude/skills/verify/: SKILL.md
.githooks/: README.md  commit-msg
.github/actions/gantry-gate/: README.md  action.yml
.github/workflows/: bazel.yml  ci.yml  eval-gate.yml
adapters/foxglove/: README.md  conftest.py  requirements.txt
adapters/foxglove/gantry_foxglove/: __init__.py  __main__.py  mapping.py  protocol.py  publisher.py  tap.py  video.py
adapters/foxglove/tests/: fake_server.py  test_mapping.py  test_protocol.py  test_tap.py  test_video.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  HardwarePanel.tsx  Scene3D.test.tsx  Scene3D.tsx  SqlConsole.tsx  VideoPanel.tsx  captureAdapter.ts  channel.test.ts  channel.ts  config.ts  experiments.test.ts  experiments.ts  hardware.test.ts  hardware.ts  history.test.ts  history.ts  main.tsx  models.ts  playback.test.ts  playback.ts  pose.test.ts  pose.ts  scene3dControls.test.tsx  scene3dControls.tsx  sql.test.ts  sql.ts  sqlApi.ts  styles.css  test-setup.ts  timeFormat.test.ts  timeFormat.ts  uploadQueue.test.ts  uploadQueue.ts  urdf.test.ts  urdf.ts  useExperiments.test.ts  useExperiments.ts  useHardware.test.ts  useHardware.ts  (+12 more)
core/go/auth/: BUILD.bazel  auth_test.go  handler.go  middleware.go  scopes.go  service.go  store.go  token.go
core/go/benchdb/: BUILD.bazel  adopt_internal_test.go  benchdb.go  benchdb_test.go
core/go/benchdb/migrations/: 0002_segments.sql  0004_hardware.sql  0005_workspaces.sql  0006_tokens.sql  0007_eval_gating.sql  0007_sources.sql  0008_stations.sql  20260720120000_eval.sql  README.md
core/go/blob/: BUILD.bazel  blob.go  blob_test.go  fsblob.go  s3blob.go
core/go/duckdb/: BUILD.bazel  engine_test.go  provider.go
core/go/eval/: BUILD.bazel  combine.go  eval_test.go  gate.go  gating_test.go  handler.go  metrics.go  service.go  store.go  telemetry.go  telemetry_test.go
core/go/experiments/: BUILD.bazel  experiments_test.go  handler.go  replay.go  service.go  store.go
core/go/foxglove/: BUILD.bazel  client.go  client_test.go  fakeserver_test.go  mapping.go  mapping_test.go  protocol.go  protocol_test.go
core/go/hardware/: BUILD.bazel  hardware_test.go  service.go  store.go
core/go/ingest/: BUILD.bazel  ingest.go  ingest_test.go
core/go/mcp/: BUILD.bazel  asserts.go  bus.go  collect.go  evaltools.go  evaltools_test.go  experiments.go  mcp.go  scope.go  sql.go  tools.go  tools_test.go
core/go/models/: BUILD.bazel  models.go  models_test.go
core/go/query/: BUILD.bazel  asserts.go  downsample_test.go  planner.go  planner_test.go  query.go  query_test.go
core/go/registry/: BUILD.bazel  registry_test.go
core/go/segments/: BUILD.bazel  catalog.go  reader.go  row.go  segments_test.go  util.go  writer.go
core/go/source/: BUILD.bazel  handler.go  service.go  source_test.go  store.go  supervisor.go  supervisor_test.go
core/go/stations/: BUILD.bazel  handler.go  selector.go  service.go  stations_test.go  store.go
core/go/stream/: BUILD.bazel  bus.go  subject.go
core/go/video/: BUILD.bazel  blob.go  mime_test.go  service.go  store.go  video_test.go
deploy/: README.md  docker-compose.yml
deploy/nats/: nats.conf
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/harness/: feeder.mjs  fixtures.ts  global-setup.ts  global-teardown.ts  static-server.mjs  util.ts
e2e/specs/: _helpers.ts  charts.spec.ts  experiments.spec.ts  hardware.spec.ts  panel3d.spec.ts  replay.spec.ts  settings.spec.ts  sources.spec.ts  sql.spec.ts  timenav.spec.ts  video.spec.ts  workspace.spec.ts
examples/eval/: README.md  conftest.py  gantry_eval.py  so101_sim_gate.py  test_gantry_eval.py
examples/so101/: README.md  conftest.py  so101_bridge.py  so101_lerobot_bridge.py  so101_ports.py  so101_setup.py  so101_teleop_gantry.py  test_so101.py
sdk/: Cargo.toml  rust-toolchain.toml
sdk/gantry-connect/: Cargo.toml
sdk/gantry-connect-proto/: Cargo.toml  build.rs
sdk/gantry-connect-proto/src/: lib.rs
sdk/gantry-connect/examples/: simulator.rs
sdk/gantry-connect/src/: batch.rs  buffer.rs  client.rs  lib.rs  model.rs  transport.rs
sdk/gantry-connect/tests/: batching.rs
sdk/gantry-edge/: Cargo.toml
sdk/gantry-edge-http/: Cargo.toml
sdk/gantry-edge-http/src/: lib.rs
sdk/gantry-edge-http/tests/: connect_protocol.rs
sdk/gantry-edge-proto/: Cargo.toml  build.rs
sdk/gantry-edge-proto/src/: lib.rs
sdk/gantry-edge/examples/: simulator.rs
sdk/gantry-edge/src/: batch.rs  buffer.rs  client.rs  error.rs  lib.rs  model.rs  transport.rs
sdk/gantry-edge/tests/: batching.rs
sdk/gantry-serial-agent/: Cargo.toml
sdk/gantry-serial-agent/src/: lib.rs  main.rs  pipeline.rs  source.rs  timesync.rs  translate.rs
sdk/gantry-serial-agent/tests/: e2e_edge.rs  file_replay.rs  translate_unit.rs  translation_tlm.rs
sdk/gantry-serial-agent/tests/common/: mod.rs
sdk/gantry-splitter/: Cargo.toml
sdk/gantry-splitter/src/: calibration.rs  daemon.rs  decoder.rs  lib.rs  main.rs  pty.rs  publish.rs  pump.rs  sink.rs
sdk/gantry-splitter/tests/: loopback.rs
sdk/gantry-tlm/: Cargo.toml
sdk/gantry-tlm-derive/: Cargo.toml
sdk/gantry-tlm-derive/src/: expand.rs  lib.rs
sdk/gantry-tlm/examples/: zero_cost.rs
sdk/gantry-tlm/src/: lib.rs  pipeline.rs
sdk/gantry-tlm/tests/: derive.rs  disabled.rs  integration.rs  ui.rs
sdk/gantry-tlm/tests/ui/: bad_attr.rs  bad_attr.stderr  pass.rs  tuple_struct.rs  tuple_struct.stderr  unsupported_type.rs  unsupported_type.stderr
sdk/gantry-transport-http/: Cargo.toml
sdk/gantry-transport-http/src/: lib.rs
sdk/gantry-transport-http/tests/: connect_protocol.rs
sdk/gantry-wire/: Cargo.toml
sdk/gantry-wire/src/: crc.rs  decode.rs  encode.rs  lib.rs
sdk/gantry-wire/tests/: roundtrip.rs
tools/: bzl.ps1
(+228 files in other folders)
