"""Gantry monorepo Bazel module (bzlmod).

Scope (v1): Go + committed protobuf Go code, via rules_go + gazelle.
- The protobuf Go bindings under gen/go are COMMITTED generated code (buf is the
  source of truth). Bazel treats them as plain Go source; we deliberately do NOT
  wire protoc/buf toolchains into the build for v1. See docs/BAZEL.md.
- Native toolchains (go, cargo, pnpm) remain the primary path. Bazel is additive.
"""

module(
    name = "gantry",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")

# --- Go SDK -----------------------------------------------------------------
# Pin the Go toolchain so Bazel builds are hermetic and match go.mod (1.26).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.0")

# --- Go module dependencies -------------------------------------------------
# Resolved from go.mod / go.sum. Keep the use_repo list below in sync with
# `bazel mod tidy`.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_minio_minio_go_v7",
    "com_github_modelcontextprotocol_go_sdk",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nats_server_v2",
    "com_github_parquet_go_parquet_go",
    "com_github_pressly_goose_v3",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_modernc_sqlite",
)
