[package]
name = "gantry-connect-proto"
description = "Prost-generated types for the gantry.v1 wire contract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true

[build-dependencies]
# protox is a pure-Rust protobuf compiler: NO system protoc required.
protox = "0.7"
prost-build = "0.13"
