[package]
name = "gantry-edge"
description = "Gantry Edge SDK core: transport-agnostic telemetry batching/buffering. No async runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gantry-edge-proto = { path = "../gantry-edge-proto", version = "0.1.0" }
prost.workspace = true

[dev-dependencies]
# The simulator example ships against the default Connect/HTTP transport.
gantry-edge-http = { path = "../gantry-edge-http", version = "0.1.0" }
ctrlc = "3"

[[example]]
name = "simulator"
path = "examples/simulator.rs"
