[package]
name = "gantry-tlm"
description = "Device-side telemetry facade: `#[derive(Telemetry)]`, `tlm::send`, and `tlm!`. no_std, alloc-free hot path, critical-section only. Zero-cost when the `enabled` feature is off."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Disabled by default: the app opts in with `gantry-tlm/enabled`. When off, every public item
# is an inert inline stub, the derive emits nothing, and no machinery is compiled.
default = []
enabled = ["dep:critical-section", "gantry-tlm-derive/enabled"]

[dependencies]
# Wire encoder only, no alloc: the send path is heap-free. (The decoder lives behind the
# wire crate's own `alloc` feature and is only pulled in by tests.)
gantry-wire = { path = "../gantry-wire", version = "0.1.0", default-features = false }
gantry-tlm-derive = { path = "../gantry-tlm-derive", version = "0.1.0" }
critical-section = { version = "1", optional = true }

[dev-dependencies]
# Host tests: real critical-section impl + the wire decoder for round-tripping.
critical-section = { version = "1", features = ["std"] }
gantry-wire = { path = "../gantry-wire", version = "0.1.0", features = ["std"] }
trybuild = "1"

[[example]]
name = "zero_cost"
path = "examples/zero_cost.rs"
