load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "handler.go",
        "middleware.go",
        "scopes.go",
        "service.go",
        "store.go",
        "token.go",
    ],
    importpath = "github.com/Sammyjroberts/gantry/core/go/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/go/gantry/v1:gantry",
        "//gen/go/gantry/v1/gantryv1connect",
        "@com_connectrpc_connect//:connect",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["auth_test.go"],
    embed = [":auth"],
    deps = ["//core/go/benchdb"],
)
