load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "benchdb",
    srcs = ["benchdb.go"],
    embedsrcs = [
        "migrations/0001_experiments.sql",
        "migrations/0002_segments.sql",
        "migrations/0003_video.sql",
        "migrations/0004_hardware.sql",
        "migrations/0005_workspaces.sql",
        "migrations/0006_tokens.sql",
        "migrations/0007_sources.sql",
        "migrations/0006_eval.sql",
        "migrations/0007_eval_gating.sql",
        "migrations/0008_stations.sql",
    ],
    importpath = "github.com/Sammyjroberts/gantry/core/go/benchdb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pressly_goose_v3//:goose",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "benchdb_test",
    srcs = [
        "adopt_internal_test.go",
        "benchdb_test.go",
    ],
    embed = [":benchdb"],
)
