load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hardware",
    srcs = [
        "handler.go",
        "service.go",
        "store.go",
    ],
    importpath = "github.com/Sammyjroberts/gantry/core/go/hardware",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/go/gantry/v1:gantry",
        "//gen/go/gantry/v1/gantryv1connect",
        "@com_connectrpc_connect//:connect",
    ],
)

go_test(
    name = "hardware_test",
    srcs = ["hardware_test.go"],
    deps = [
        ":hardware",
        "//core/go/benchdb",
        "//gen/go/gantry/v1:gantry",
    ],
)
