load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingest",
    srcs = ["ingest.go"],
    importpath = "github.com/Sammyjroberts/gantry/core/go/ingest",
    visibility = ["//visibility:public"],
    deps = [
        "//core/go/registry",
        "//core/go/stream",
        "//gen/go/gantry/v1:gantry",
    ],
)

go_test(
    name = "ingest_test",
    srcs = ["ingest_test.go"],
    embed = [":ingest"],
    deps = [
        "//core/go/registry",
        "//gen/go/gantry/v1:gantry",
    ],
)
