load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mcp",
    srcs = [
        "asserts.go",
        "bus.go",
        "channels.go",
        "collect.go",
        "evaltools.go",
        "experiments.go",
        "mcp.go",
        "scope.go",
        "sql.go",
        "tools.go",
    ],
    importpath = "github.com/Sammyjroberts/gantry/core/go/mcp",
    visibility = ["//visibility:public"],
    deps = [
        "//core/go/auth",
        "//core/go/query",
        "//core/go/registry",
        "//core/go/stream",
        "//gen/go/gantry/v1:gantry",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@com_github_nats_io_nats_go//jetstream",
    ],
)

go_test(
    name = "mcp_test",
    srcs = [
        "channels_test.go",
        "evaltools_test.go",
        "tools_test.go",
    ],
    embed = [":mcp"],
    deps = [
        "//core/go/registry",
        "//core/go/stream",
        "//gen/go/gantry/v1:gantry",
    ],
)
