load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stream",
    srcs = [
        "bus.go",
        "subject.go",
    ],
    importpath = "github.com/Sammyjroberts/gantry/core/go/stream",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/go/gantry/v1:gantry",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_nats_io_nats_go//jetstream",
        "@com_github_nats_io_nats_server_v2//server",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "stream_test",
    srcs = [
        "bus_test.go",
        "subject_test.go",
    ],
    embed = [":stream"],
    deps = ["//gen/go/gantry/v1:gantry"],
)
